--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,14 @@
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
+        android:icon="@mipmap/ic_launcher">
         android:theme="@style/Theme.AppCompat.Light">
 
         <!-- Declares 1st (main) activity. Action "MAIN" and category "LAUNCHER" properties makes it visible in the application launcher -->
         <activity
             android:name="rs.aleph.android.example12.activities.FirstActivity"
             android:label="@string/app_name">
+            android:icon="@mipmap/ic_launcher">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -29,12 +31,14 @@
         <activity
             android:name=".activities.SecondActivity"
             android:label="@string/app_name">
+            android:icon="@mipmap/ic_launcher">
         </activity>
 
         <!-- Declares 3rd activity -->
         <activity
             android:name=".activities.ThirdActivity"
             android:label="@string/app_name">
+            android:icon="@mipmap/ic_launcher">
         </activity>
 
     </application>
