--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         <!-- Declares 1st (main) activity. Action "MAIN" and category "LAUNCHER" properties makes it visible in the application launcher -->
         <activity
             android:name="rs.aleph.android.example12.activities.FirstActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
             android:icon="@mipmap/ic_launcher">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,14 +30,14 @@
         <!-- Declares 2nd activity -->
         <activity
             android:name=".activities.SecondActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
             android:icon="@mipmap/ic_launcher">
         </activity>
 
         <!-- Declares 3rd activity -->
         <activity
             android:name=".activities.ThirdActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
             android:icon="@mipmap/ic_launcher">
         </activity>
 
