--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,22 +3,17 @@
 <!-- In principle, each app should have unique package -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="rs.aleph.android.example12">
 
-    <!-- Declares that the app needs a permission to access internet -->
-    <uses-permission android:name="android.permission.INTERNET"/>
-
-    <!-- Declares that the app needs a permission to access camera -->
-    <uses-permission android:name="android.permission.CAMERA"/>
 
 
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
         android:theme="@style/Theme.AppCompat.Light">
 
         <!-- Declares 1st (main) activity. Action "MAIN" and category "LAUNCHER" properties makes it visible in the application launcher -->
         <activity
-            android:name="rs.aleph.android.example12.activities.FirstActivity"
+            android:name=".activities.FirstActivity"
             android:label="@string/app_name"
             android:icon="@mipmap/ic_launcher">
             <intent-filter>
